# vite-oxc-decorator-stage-3

./: .gitignore  ARCHITECTURE.md  AST_IMPLEMENTATION_GUIDE.md  AST_MIGRATION_COMPLETE.md  CHANGELOG.md  COMPONENT_MODEL_MIGRATION.md  CONTRIBUTING.md  FINAL_SUMMARY.md  FIX_CLASS_DECORATOR_NAME_PRESERVATION.md  FIX_CLASS_NAME_ACCESS.md  FIX_VISUAL_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CLASS_NAME_FIX.md  LICENSE  OXC_PATTERNS_RESEARCH.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RUST_IMPLEMENTATION_STATUS.md  RUST_WASM_IMPLEMENTATION.md  SECURITY_SUMMARY.md  STUDY_GUIDE.md  WASM_ONLY_IMPLEMENTATION.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
decorator-transformer/: Cargo.toml  README.md  build-wasm.sh
decorator-transformer/src/: codegen.rs  helpers.js  lib.rs  transformer.rs
decorator-transformer/wit/: world.wit
examples/: README.md  comprehensive-example.ts  example.ts  index.html  package.json  rpc-method-example.ts  vite.config.ts
src/: index.ts
test/: class-decorator-replacement.test.ts  class-decorator-with-method-decorator.test.ts  class-extends-runtime.mjs  class-name-access.test.ts  class-replacement-runtime.mjs  complete-test.mjs  debug-transform.mjs  decorators.test.ts  method-initializer.test.ts  plugin.test.ts  runtime-example.mjs  simple-runtime-test.mjs
