[package]
name = "decorator-transformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxc_allocator = "0.96.0"
oxc_ast = "0.96.0"
oxc_codegen = "0.96.0"
oxc_parser = "0.96.0"
oxc_span = "0.96.0"
oxc_traverse = "0.96.0"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable link-time optimization
